# firecracker

src/firecracker/: Cargo.toml
src/firecracker/src/: api_server_adapter.rs  main.rs
src/gdb_server/: Cargo.toml
src/gdb_server/src/: lib.rs  target.rs  util.rs  walker.rs
src/kernel/src/loader/: mod.rs
src/vmm/: Cargo.toml
src/vmm/src/: builder.rs  lib.rs  resources.rs  rpc_interface.rs
src/vmm/src/default_syscalls/: mod.rs
src/vmm/src/utilities/test_utils/: mod.rs
src/vmm/src/vstate/vcpu/: mod.rs
src/vmm/tests/: integration_tests.rs
tools/: devtool
tools/devctr/: Dockerfile.aarch64  Dockerfile.x86_64  pyproject.toml
